# UnScripted

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/admin/: next.config.ts  package.json  tsconfig.json
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/components/: admin-shell.module.css  admin-shell.tsx  views.tsx
apps/admin/lib/: api.ts
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-shell.module.css  app-shell.tsx  views.tsx
apps/web/lib/: api.ts
docs/adr/: 0001-v1-architecture.md
docs/experiments/: README.md
docs/runbooks/: local-bootstrap.md
infra/docker/prometheus/: prometheus.yml
ml/: __init__.py
ml/common/: __init__.py  agent_planner.py  bootstrap_pipeline.py  provenance.py  scoring.py
ml/features/: __init__.py  feed.py
ml/models/: __init__.py  registry.py
ops/alerts/: control-plane-rules.yml
ops/dashboards/: control-plane-overview.json
services/: __init__.py
services/api/app/: __init__.py  main.py
services/event-consumer/app/: __init__.py  main.py
services/inference-service/app/: __init__.py  main.py
services/synthetic-engine/app/: __init__.py  main.py
tests/: test_api_smoke.py  test_phase2_agents.py  test_phase3_pipeline.py  test_phase4_observability.py  test_phase5_simulation.py  test_phase6_hardening.py
workers/: __init__.py
workers/temporal/app/: worker.py
workers/trainer-batch/app/: main.py
(+64 files in other folders)
